# new_rag

./: .gitignore  Dockerfile  README.md  crawler.py  docker-compose.ollama.yml  ergebnisse.txt  lasterrror.txt  llm.py  main.py  pyproject.toml  rag.py  requirements.txt  retriver.py  schemah.py  test.txt  tester.txt  verloren_gegange.txt
Crawler_for_websites/: crawler.py  llm.py  schemah.py
RAG/: main.py  retriver.py
browser_autmatisation/: Dockerfile  llm.py  messages.py  requirements.txt  state.py
browser_autmatisation/get_youre_guide/: back.py  beispiel.py  browser_auto.py  chat.py  checks.py  crawl4ai_better_version.py  fast_api.py  fastapi.py  get_youre_guide_automatisation.py  llm.py  main.py  memgraph.py  messages.py  redis_func.py  redis_worker.py  scraper.py  serializer.py  state.py  test.py  test_fastapi.py
browser_autmatisation/markdown_analys/: main.py
browser_autmatisation/selnium_automatisation/: llm.py  message.py  selnium.py  state.py  tool.py
data/: data.txt
docker_compose/: docker-compose.both.yml  docker-compose.browserless.yml  docker-compose.kernel.yml  docker-compose.memgraph.yml
