[project]
name = "new-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.9.4",
    "kernel>=0.17.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "llama-index>=0.14.3",
    "llama-index-graph-stores-memgraph>=0.4.1",
    "nest-asyncio>=1.6.0",
    "playwright>=1.55.0",
]
