[project]
name = "new-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.25.0",
    "browser-use>=0.9.4",
    "crawl4ai>=0.7.6",
    "docker>=7.1.0",
    "fastapi>=0.121.1",
    "geopy>=2.4.1",
    "kernel>=0.17.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "llama-index>=0.14.3",
    "llama-index-graph-stores-memgraph>=0.4.1",
    "nest-asyncio>=1.6.0",
    "ollama>=0.6.0",
    "playwright>=1.55.0",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "sse-starlette>=3.0.3",
    "uuid>=1.30",
]
